--- a/LAB1/054_Lab1_03_Linear_Algebra.ipynb
+++ b/LAB1/054_Lab1_03_Linear_Algebra.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "054_Lab1_03_Linear_Algebra.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyPrzMo7LfU8BaS5sJ8loywk",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/DZ521111/054-DhruvKakadiya/blob/main/054_Lab1_03_Linear_Algebra.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -40,7 +28,7 @@
         "from google.colab import drive\n",
         "drive.mount(\"/content/drive\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -60,7 +48,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,10 +64,10 @@
         "# two matrics\n",
         "array1 = np.array([[5, 9, 3],[3, 7, 5]])\n",
         "array2 = np.array([[3,-9],[5, 4],[7, -8]])\n",
-        "print(nparr1)\n",
-        "print(nparr2)"
+        "print(array1)\n",
+        "print(array2)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +96,7 @@
         "array = np.random.rand(3, 4)\n",
         "print(array)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +123,7 @@
         "mul = np.dot(array1, array2)\n",
         "print(mul)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +155,7 @@
         " \n",
         "print (res) "
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +180,7 @@
         "mean = np.mean(array1)\n",
         "print(mean)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +199,7 @@
       "source": [
         "main_data = pd.read_csv(\"/content/drive/MyDrive/Sem7_ML_Data/LAB01/mtcars.csv\")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -229,7 +217,7 @@
         "meancenter = main_data.apply(lambda e: e - e.mean())\n",
         "print(meancenter.head())\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
